--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/custom.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -62,13 +63,13 @@
   
     <div class="jumbotron">
       <div class="container">
-        
+  
       </div>
     </div>
 
     <!-- Section: about -->
-    <div class="about" style="margin-bottom: 25px">
-    <div class="container">
+    <div class="about">
+    <div class="container about">
       <div class="row">
         <div class="col-md-4 col-md-offset-1" >
           <img src="assets/img/gary-ditsch-bio1.jpg" class="img-responsive img-rounded" alt="" />
