--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
   
     <div class="jumbotron">
-      <div class="container">
-  
+      <div>
+      <img src="assets/img/gary-favorite-things.jpg" class="img-responsive">
       </div>
     </div>
 
