--- a/index.html
+++ b/index.html
@@ -33,33 +33,19 @@
   </head>
 
   <body>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Gary Ditsch, MS, CSCS, NSCA-CPT</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="https://garyditsch.github.io/">Home</a></li>
+      <li><a href="https://garyditsch.github.io/about.html">About</a></li>
+    </ul>
+  </div>
+</nav>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Gary Ditsch, MS, CSCS, NSCA-CPT</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <!-- <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form> -->
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+<!-- Main jumbotron for a primary marketing message or call to action -->
   
     <div class="jumbotron">
       <div>
@@ -67,61 +53,14 @@
       </div>
     </div>
 
-    <!-- Section: about -->
-    <div class="about">
-    <div class="container about">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-1" >
-          <img src="assets/img/gary-ditsch-bio1.jpg" class="img-responsive img-rounded" alt="" />
-        </div> 
-        <div class="col-md-6">
-        <h1>About me:</h1>
-          <strong>I am from</strong><br>.. Nebraska, however that doesn't mean I am from Lincoln or Omaha. I grew up further west in an area called the Sandhills. I now identify myself as a Kentuckian, having lived in Lexington longer than anywhere else. As many Kentuckians, I'm pretty proud of it. </p>
-          <p>
-          <strong>I am passionate about</strong><br>.. health, fitness and performance, which has guided my personal and professional decisions for the duration of my life. Which is approximately 38 years.</p>
-          <p>
-          <strong>I am obsessed with</strong><br>.. the intersection of my passion (see above) and technology. I am an optimist when it comes to the integration of technology into our lives, to make people healthier, more fit and perform better. Specifically, I'm interested how we collect and analyze data from new technologies that can be used by individuals to improve their <strong>health related behaviors</strong>.
-          </p>
-        </div>
-      </div>    
-    </div>
-    </div>
+<!-- Footer -->
 
-
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-3 col-md-offset-1">
-          <h3>Find me socially:</h3>
-          <ul>
-          <li><a href="https://www.facebook.com/gary.ditsch">Facebook</a></li>
-          <li><a href="https://www.linkedin.com/in/garyditsch">LinkedIn</a></li>
-          <li><a href="https://twitter.com/ditschfitness">Twitter</a></li>
-          <li><a href="https://github.com/garyditsch">Github</a></li>
-          <li><a href="http://stackexchange.com/users/8850981/gary-ditsch">StackOverFlow</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3">
-          <h3>I'm Here Too:</h3>
-          <ul>
-          <li><a href="http://www.garyditsch.com">Personal Blog</a></li>
-          <li><a href="http://www.activelexington.com">Active Lexington</a></li>
-          <li><a href="http://www.centralkentuckygrandprix">Central Kentucky Grand Prix</a></li>
-          <li><a href="http://www.endurancebasecamp.com">Endurance Base Camp</a></li>
-          </ul>
-       </div>
-        <div class="col-md-4">
-          <h3>Things I'm Into: </h3>
-          Running. Husker Football. Data. Outdoor Adventure. Python (the coding language). R (learning). Experimentation. Red River Gorge. Live Music. Fitbit. Strava. My dog Kelty. Podcasts (current favorites: Joe Rogan, Tim Ferriss and The Fizzle Show). Game of Thrones. Hanging out with friends.
-        </div>
+    <footer>
+      <div class="footer navbar-fixed-bottom">
+        <p class="text-muted">Place sticky footer content here.  |  &copy; 2016.</p>
       </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; 2016.</p>
-      </footer>
-    </div> <!-- /container -->
+    </footer>
+    <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
