edits to footer

--- a/index.html
+++ b/index.html
@@ -56,9 +56,21 @@
 <!-- Footer -->
 
     <footer>
-      <div class="footer navbar-fixed-bottom">
-        <p class="text-muted">Place sticky footer content here.  |  &copy; 2016.</p>
-      </div>
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="main-footer">
+        <div class="main-footer-content">
+        <ul class="nav navbar-nav navbar-big">
+        <li><a href="https://garyditsch.github.io/">Home</a></li>
+        <li><a href="https://garyditsch.github.io/about.html">About</a></li>
+       </ul>
+       </div>
+       </div>
+       <div class="secondary-footer">
+       <div class="secondary-footer-content">
+       Place sticky footer content here.  |  &copy; 2016.
+       </div>
+       </div>
+    </div>
     </footer>
     <!-- /container -->
 
