updating design, adding contact

--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@ title: About
 
 ---
 
-<!-- Section: about -->
-<div class="about">
-  <div class="container about">
+<!-- Content: About -->
+
+<!-- First Row : About Content -->
+
     <div class="row">
         <div class="col-md-4 col-md-offset-1" >
           <img src="/assets/img/gary-ditsch-bio1.jpg" class="img-responsive img-rounded" alt="" />
@@ -20,11 +21,8 @@ title: About
           </p>
         </div>
     </div>
-  </div>    
-</div>
-
-    <div class="container about">
-      <!-- Example row of columns -->
+  
+<!-- Secondary Row : About Content -->
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h4>Things I'm Into: </h4>
@@ -44,4 +42,7 @@ title: About
           <a href="http://www.garyditsch.com">Personal Blog</a>
        </div>
       </div>
-    </div>
+
+<!-- End About Content -->
+
+
