adding bootcamp category page

--- a/_posts/2016-08-23-web-development-bootcamp-day-1.html
+++ b/_posts/2016-08-23-web-development-bootcamp-day-1.html
@@ -2,6 +2,7 @@
 layout: post
 title: Web Development Bootcamp - Day 1
 date: 2016-08-23 07:52:55.000000000 -04:00
+category: bootcamp
 
 ---
 <p class="p1">The first day of bootcamp is complete and here are a few things that I took away with me:</p>
