--- a/awesome.html
+++ b/awesome.html
@@ -1,30 +1,35 @@
 ---
 layout: page
-title: Blog
+title: Awesome
 
 ---
 
 
-<!-- Content: Blog -->
-
+<!-- Content: Bootcamp -->
 
   <div class="row">
     <div class="col-md-8 col-md-offset-2" >
-    <h3>List of all posts: </h3>
+    <h4>All things... bootcamp: </h4>
     <table class="table table-striped">
            <tr>
               <th>
               Date:
               </th>
               <th>
+              Category:
+              </th>
+              <th>
               Post:
               </th>
             </tr> 
 
-        {% for post in site.posts %}
+        {% for post in site.categories.bootcamp %}
             <tr>
               <td>
               {{ post.date | date: "%b %d, %Y" }}
+              </td>
+              <td>
+              {{ post.category }}
               </td>
               <td>
               <a href="{{post.url}}"> {{ post.title }}</a>
@@ -32,10 +37,9 @@ title: Blog
             </tr> 
 		{% endfor %}
     </table>
-
   	</div>
   </div>
 
 
 
-<!-- End Blog Content -->
+<!-- End Content -->
