--- a/contact.html
+++ b/contact.html
@@ -16,17 +16,15 @@ title: About
              method="POST">
           <div class="form-group">
          <label for="fullName">Full Name</label>
-         <input type="text" class="form-control" id="fullName" placeholder="Name">
+         <input type="text" class="form-control" name="name" id="fullName" placeholder="Name">
          </div>
          <div class="form-group">
-         <label for="phone">Email</label>
-         <input type="text" class="form-control" id="email" placeholder="Email">
+         <label for="email">Email</label>
+         <input type="text" class="form-control" name="email" id="email" placeholder="Email">
          </div> 
          <div class="form-group">
              <label for="message">Message</labe>
              <textarea id="message" name="message" class="form-control" rows="5" cols="100"  ></textarea>
-             <!-- <textarea rows="5" cols="50" name="description">
-              -->
          </div>
          <button type="submit" class="btn btn-primary">Submit</button>
          </form>
