updating portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@ title: Portfolio
 
     <!-- Project One -->
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-4">
               <div class="portfolio-image">
-                <img class="img-responsive" src="/assets/img/twitter-clone-screenshot.png" alt="Twitter Clone">
+                <img class="img-responsive" src="/assets/img/twitter_clone.png" alt="Twitter Clone">
               </div>
             </div>
             <div class="col-md-7">
@@ -24,14 +24,15 @@ title: Portfolio
                   </div>
                   <div class="panel-body">
 
-                    <p>Technology: Django, Postgres, Gravatar, Heroku, [Twilio API]</p>
-                    <p>Languages: Python, HTML, CSS</p>
+                    <p><strong>Technology:</strong> Django, Postgres, Gravatar, Heroku, Material Design Lite, [Twilio API]</p>
+                    <p><strong>Languages:</strong> Python, HTML, CSS</p>
                   </div>
                 </div>
                 <div class="btn-group btn-block">
                   <a class="btn btn-default btn-block" href="#">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a>
                   <a class="btn btn-default btn-block" href="https://intense-wave-29442.herokuapp.com/">View Live Site<span class="glyphicon glyphicon-chevron-right"></span></a>
-                  <a class="btn btn-default btn-block" href="https://github.com/garyditsch/twitter_clone">Review Source Code & Project Plan<span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-default btn-block" href="https://github.com/garyditsch/twitter_clone">Review Source Code<span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-default btn-block" href="https://github.com/garyditsch/twitter_clone/projects">Review Project Plan<span class="glyphicon glyphicon-chevron-right"></span></a>
                 </div>
             </div>
         </div>
@@ -41,7 +42,7 @@ title: Portfolio
 
         <!-- Project Two -->
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <div class="portfolio-image">
                   <img class="img-responsive" src="" alt="">
                 </div>
@@ -70,7 +71,7 @@ title: Portfolio
 
         <!-- Project Three -->
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <div class="portfolio-image">
                   <img class="img-responsive" src="" alt="">
                 </div>
@@ -99,9 +100,9 @@ title: Portfolio
 
         <!-- Project Four -->
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <div class="portfolio-image">
-                  <img class="img-responsive" src="" alt="">
+                  <img class="img-responsive" src="/assets/img/husker_weather.png" alt="Husker Gameday Weather">
                 </div>
             </div>
             <div class="col-md-7">
@@ -111,7 +112,7 @@ title: Portfolio
                   </div>
                   <div class="panel-body">
 
-                    <p>Technology: Flask, Open Weather API</p>
+                    <p>Technology: Flask, Open Weather API, Bootstrap</p>
                     <p>Languages: Python, HTML, CSS</p>
                   </div>
                 </div>
