adding blog post

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,12 @@ title: Portfolio
 
     <!-- Project One -->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="portfolio-image">
                 <img class="img-responsive" src="/assets/img/twitter_clone.png" alt="Twitter Clone">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title">Twitter Clone</h3>
@@ -41,7 +41,7 @@ title: Portfolio
         <hr>
 
         <!-- Project Two -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-4">
                 <div class="portfolio-image">
                   <img class="img-responsive" src="" alt="">
@@ -64,33 +64,33 @@ title: Portfolio
                   <a class="btn btn-default btn-block" href="#">Review Source Code<span class="glyphicon glyphicon-chevron-right"></span></a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <hr>
 
         <!-- Project Three -->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="portfolio-image">
-                  <img class="img-responsive" src="" alt="">
+                  <img class="img-responsive" src="/assets/img/angular_todo.png" alt="Angular Todo">
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title">Todo List</h3>
                   </div>
                   <div class="panel-body">
 
-                    <p>Technology: AngularJS, [Firebase]</p>
+                    <p>Technology: AngularJS, Bootstrap</p>
                     <p>Languages: Javascript, HTML, CSS</p>
                   </div>
                 </div>
                 <div class="btn-group btn-block">
                   <a class="btn btn-default btn-block" href="#">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a>
-                  <a class="btn btn-default btn-block" href="#">View Live Site<span class="glyphicon glyphicon-chevron-right"></span></a>
-                  <a class="btn btn-default btn-block" href="#">Review Source Code<span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-default btn-block" href="https://garyditsch.github.io/angular-todo/">View Live Site<span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-default btn-block" href="https://github.com/garyditsch/angular-todo">Review Source Code<span class="glyphicon glyphicon-chevron-right"></span></a>
                 </div>
             </div>
         </div>
@@ -100,12 +100,12 @@ title: Portfolio
 
         <!-- Project Four -->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="portfolio-image">
                   <img class="img-responsive" src="/assets/img/husker_weather.png" alt="Husker Gameday Weather">
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title">Husker Gameday Weather</h3>
