--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@ title: Portfolio
                   </div>
                 </div>
                 <div class="btn-group btn-block">
-                  <a class="btn btn-default btn-block" href="#">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <a class="btn btn-default btn-block" href="https://youtu.be/uPhbqrRILec">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a>
                   <a class="btn btn-default btn-block" href="https://intense-wave-29442.herokuapp.com/">View Live Site<span class="glyphicon glyphicon-chevron-right"></span></a>
                   <a class="btn btn-default btn-block" href="https://github.com/garyditsch/twitter_clone">Review Source Code<span class="glyphicon glyphicon-chevron-right"></span></a>
                   <a class="btn btn-default btn-block" href="https://github.com/garyditsch/twitter_clone/projects">Review Project Plan<span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -88,7 +88,7 @@ title: Portfolio
                   </div>
                 </div>
                 <div class="btn-group btn-block">
-                  <a class="btn btn-default btn-block" href="#">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <!-- <a class="btn btn-default btn-block" href="#">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a> -->
                   <a class="btn btn-default btn-block" href="https://garyditsch.github.io/angular-todo/">View Live Site<span class="glyphicon glyphicon-chevron-right"></span></a>
                   <a class="btn btn-default btn-block" href="https://github.com/garyditsch/angular-todo">Review Source Code<span class="glyphicon glyphicon-chevron-right"></span></a>
                 </div>
@@ -117,7 +117,7 @@ title: Portfolio
                   </div>
                 </div>
                 <div class="btn-group btn-block">
-                  <a class="btn btn-default btn-block" href="#">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a>
+                  <!-- <a class="btn btn-default btn-block" href="#">Watch Walkthrough<span class="glyphicon glyphicon-chevron-right"></span></a> -->
                   <a class="btn btn-default btn-block" href="http://www.huskergamedayweather.com/">View Live Site<span class="glyphicon glyphicon-chevron-right"></span></a>
                   <a class="btn btn-default btn-block" href="#">Review Source Code<span class="glyphicon glyphicon-chevron-right"></span></a>
                 </div>
