fixing CKGP link issue on about page

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ title: About
           <hr>
           <h4>Some of my current projects:</h4>
           <a href="http://www.activelexington.com">Active Lexington</a> |
-          <a href="http://www.centralkentuckygrandprix">Central Kentucky Grand Prix</a> |
+          <a href="http://www.centralkentuckygrandprix.com">Central Kentucky Grand Prix</a> |
           <a href="http://www.endurancebasecamp.com">Endurance Base Camp</a> |
           <a href="http://www.garyditsch.com">Personal Blog</a>
        </div>
